plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'application'
}

group = 'ro.mpp2024'
version = 'unspecified'

repositories {
    mavenCentral()
}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
sourceCompatibility = '21'
targetCompatibility = '21'

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}
application {
    mainClass = 'ro.mpp2024.controller.Application'
}
dependencies {
    implementation project(':domain')
    implementation project(':repository')
    implementation project(':service')

    implementation('org.controlsfx:controlsfx:11.2.1')
    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
        exclude(group: 'org.openjfx')
    }

    implementation 'org.openjfx:javafx-controls:21.0.1'
    implementation 'org.openjfx:javafx-fxml:21.0.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    runtimeOnly group: 'org.xerial', name: 'sqlite-jdbc', version: '3.49.0.0'
}

test {
    useJUnitPlatform()
}
jar {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    manifest {
        attributes('Main-Class': 'ro.mpp2024.controller.Application')
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
// Gradle run configuration
run {
    jvmArgs = ['--module-path', '/path/to/javafx-sdk/lib', '--add-modules', 'javafx.controls,javafx.fxml']
}